fix: improve test isolation and remove Test Case #14
- Remove Test Case #14 (Invalid Inheritance Patterns) as invalid patterns
  are caught at build time and cannot be tested in WDIO
- Fix test isolation issues in extends test suite:
  - Improve iframe cleanup to remove all iframes instead of just first
  - Replace fixed browser.pause() with browser.waitUntil() for DOM updates
  - Add try/finally to ensure console.info override is always restored
  - Wait for actual DOM changes instead of fixed delays
- Update test coverage documentation to reflect removal of Test Case #14

--- a/test/storybook/docs/Testing/Behavior/Extends/Overview.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/Overview.mdx
@@ -313,22 +313,6 @@ export const ExtendsTestCasesTable = () => {
       testCount: testCaseStatus[11]?.testCount || 0,
       section: testCaseStatus[11]?.implemented ? 'implemented' : 'missing',
     },
-    {
-      id: 14,
-      implemented: testCaseStatus[14]?.implemented || false,
-      desc: testCaseStatus[14]?.description || '',
-      types: (
-        <>
-          <strong>🔴 Robustness:</strong> Invalid Inheritance Patterns - Unsupported inheritance scenarios and error conditions<br/>
-          <strong>Error Scenarios:</strong> Circular inheritance attempts, unsupported patterns, compiler error validation<br/>
-          <small>Ensures reliability | Error handling | Compiler validation | Developer experience</small>
-        </>
-      ),
-      tested: getGroupStats('invalid-inheritance').tested,
-      total: getGroupStats('invalid-inheritance').total,
-      testCount: testCaseStatus[14]?.testCount || 0,
-      section: testCaseStatus[14]?.implemented ? 'implemented' : 'missing',
-    },
     // 🔴 Robustness & Production (15-17) - TODO
     {
       id: 15,
@@ -449,7 +433,7 @@ Common inheritance scenarios including abstract classes, component-to-component,
 Real-world reactive controller patterns comparing Stencil's extends capabilities with other frameworks like Lit, demonstrating practical use cases including composition-based ReactiveControllerHost pattern and scaling demonstrations for both inheritance and composition approaches.
 
 ### **🔴 Robustness & Production (14-16, 20)** — 4 test cases
-Edge cases, invalid inheritance patterns, decorator conflicts, mixed decorator types, SSR behavior, and production-ready scenarios to ensure extends works reliably in all environments.
+Edge cases, decorator conflicts, mixed decorator types, SSR behavior, and production-ready scenarios to ensure extends works reliably in all environments.
 
 ---
 
